# code-review-graph-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
eval/: AGENT_PATTERN_ANALYSIS.md  BENCHMARKS.md  BENCHMARK_2C_RESULTS.md  BENCHMARK_MCP_V1.3_RESULTS.md  BENCHMARK_METHODOLOGY.md  BENCHMARK_R9_CLEAN.md  BENCHMARK_V1.5_FULL_RESULTS.md  NO_MCP_BENCH_RESULTS.md  README.md  benchmark-prompts-4way.md  cases.json  eval-report.py  gold-eval-set.json  no-mcp-agent-bench.json  no-mcp-prompts.md  results.json
fuzz/: Cargo.toml  build.rs
fuzz/fuzz_targets/: fuzz_parse_bytes.rs
queries/: c.scm  csharp.scm  go.scm  java.scm  javascript.scm  kotlin.scm  php.scm  python.scm  ruby.scm  rust.scm  swift.scm  zig.scm
src/: config.rs  embeddings.rs  error.rs  graph.rs  incremental.rs  intern.rs  lib.rs  main.rs  parser.rs  paths.rs  persistence.rs  search.rs  server.rs  tools.rs  tsconfig.rs  types.rs  visualization.rs
tests/: eval_benchmark.rs  integration.rs
tests/fixtures/: test.vue
tests/snapshots/: integration__snapshot_find_large_functions.snap  integration__snapshot_get_impact_radius.snap  integration__snapshot_list_graph_stats.snap  integration__snapshot_query_graph_children_of.snap  integration__snapshot_semantic_search_nodes.snap  integration__snapshot_trace_call_chain.snap
