[package]
name = "code-review-graph"
version = "1.0.0"
edition = "2021"
description = "Persistent incremental knowledge graph for token-efficient, context-aware code reviews"
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "code-review-graph"
path = "src/main.rs"

[dependencies]
# MCP server
rmcp = { version = "1.2", features = ["server", "transport-io"] }

# Tree-sitter (native Rust - the original implementation)
tree-sitter = "0.24"
tree-sitter-python = "0.25"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-php = "0.24"
tree-sitter-kotlin-ng = "1.1"
tree-sitter-swift = "0.7"

# Graph algorithms
petgraph = { version = "0.6", features = ["serde-1"] }

# Graph persistence
bincode = "1.3"
zstd = "0.13"
crc32fast = "1.4"
tempfile = "3"

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Hashing
sha2 = "0.10"

# File system
walkdir = "2"
glob = "0.3"

# HTTP client for embedding providers
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Utilities
regex = "1"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
