[package]
name = "code-review-graph"
version = "1.0.0"
edition = "2021"
description = "Persistent incremental knowledge graph for token-efficient, context-aware code reviews"
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "code-review-graph"
path = "src/main.rs"

[features]
default = ["embeddings-fastembed"]
embeddings-fastembed = ["dep:fastembed"]
gpu-directml = ["dep:ort"]
embeddings-local = [
    "dep:candle-core",
    "dep:candle-nn",
    "dep:candle-transformers",
    "dep:tokenizers",
    "dep:hf-hub",
]
hnsw-index = ["dep:usearch"]
tantivy-search = ["dep:tantivy"]

[dependencies]
# Fast local embeddings via fastembed (default — free, no API key needed)
fastembed = { version = "4", optional = true }

# GPU acceleration via DirectML (Windows, any GPU)
ort = { version = "=2.0.0-rc.9", optional = true, features = ["directml"] }

# HNSW vector index (optional accelerated search)
usearch = { version = "2", optional = true }

# Full-text search (opt-in)
tantivy = { version = "0.22", optional = true }

# Local embeddings via candle (legacy fallback)
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }
hf-hub = { version = "0.5", optional = true }

# MCP server
rmcp = { version = "1.2", features = ["server", "transport-io"] }

# Tree-sitter (native Rust - the original implementation)
tree-sitter = "0.26"
tree-sitter-python = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-rust = "0.24.1"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-ruby = "0.23.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-swift = "0.7.1"

# Parallelism
rayon = "1.11"

# Progress bars
indicatif = "0.18"

# Graph algorithms
petgraph = { version = "0.8", features = ["serde-1"] }

# Graph persistence
postcard = { version = "1", features = ["alloc"] }
zstd = "0.13"
crc32fast = "1.4"
tempfile = "3"

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Hashing
sha2 = "0.10"

# File system
walkdir = "2"
glob = "0.3"

# HTTP client for embedding providers
reqwest = { version = "0.13", features = ["json", "blocking"] }

# Config dir resolution
dirs = "6"

# Utilities
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
strip = "debuginfo"
